# market-maker

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: config.rs
backend/src/api/: handlers.rs
backend/src/data/: mod.rs
backend/src/ml/: lstm_model.rs  mod.rs  pattern_matcher.rs
frontend/: index.html  tailwind.config.js
frontend/src/: App.css  index.css
frontend/src/components/: MarketCard.jsx  Navbar.jsx  StatCard.jsx
frontend/src/pages/: Backtest.jsx  Patterns.jsx  Signals.jsx
frontend/src/services/: api.js
