[package]
name = "market-maker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
actix-files = "0.6"
parking_lot = "0.12"
futures = "0.3"
tonic = "0.10"
prost = "0.12"

[[bin]]
name = "server"
path = "src/main.rs"
